# Handshake-Reader

./: .gitignore  Cargo.toml  README.md  ja3spoof.go  rustfmt.toml
src/: main.rs
tlspoof/: akamai.js  akamaibp.py  main.js  tlspoof.go
