[package]
name = "handshake_reader"
version = "0.1.0"
authors = ["XVI <xvi@xvisolutions.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
actix-tls = "2.0.0"



